5.3.7 -> 5.3.8:
    - jbj: remove fsync(2) after file install, its intolerably slow.
    - jbj: simplify the lookup3.c valgrind logic.
    - jbj: condition mdvbz#61746 on RPM_VENDOR_MANDRIVA.
    - proyvind: rpmdb: set and create default log directory so that it doesn't
	get changed ie. when installing to a fresh chroot and no DB_CONFIG
	exists, with transaction logs ending up in a path that changes later.
    - proyvind: perl: fix typo breaking RPM::Transaction->problems().
    - devzero2000: Fix null requirement produced by mono-find-requires
      by Silvan Calarco
    - jbj: omp: avoid thread overhead for a single digest.
    - proyvind: fix noarch sub-packages not having it's corresponding platform
	tag (mdvbz#61746).
    - proyvind: lookup3: fix runtime valgrind check and make it local.
    - proyvind: lookup3: fix valgrind #ifdef and perform runtime check for
	valgrind in stead.

5.3.6 -> 5.3.7:
    - jbj: remove markReplacedFiles.
    - jbj: i18n: update po files (Translation Project).
    - jbj: fix: %config handling broken while refactoring a loop.
    - jbj: rpmmi: lazily instantiate the basenames header set.
    - jbj: re-add the lazy creator avoiding self LOOP's in ordering pkgs
	during installs using parentdir relations.
    - proyvind: rpmts: don't default rootDir to "" if set to NULL, as it
	confusing rpm checks on NULL & "/" only, without "", making ie.
	%posttrans scriptlets fail where NULL is used (mdvbz#61696).
    - jbj: fix memory leak on user lookup error.
    - proyvind: rubygems: only add runtime dependencies (Rémy Clouard).
    - proyvind: export rpmbf.h & rpmgi.h to public API.
    - proyvind: rpm4compat: add RPMTAG_FILENAMES & RPMDBI_LABEL.
    - proyvind: perl: start on adding back some missing functionality from RPM4:
	RPM::Sign, RPM::Transaction::importpubkey, RPM::Transaction::checkrpm.
    - proyvind: rpmconstant: update constants.
    - proyvind: rpmconstant: fix rpmh2tbl to error out for constants not found.

5.3.5 -> 5.3.6: