@@ -24,7 +24,7 @@ AM_CFLAGS = $(OPENMP_CFLAGS)
 
 EXTRA_DIST =	hashtab.h bsdiff.1 bspatch.1 dotgraph.hh
 
-EXTRA_PROGRAMS = augtool cudftool debugedit grep \
+EXTRA_PROGRAMS = augtool cudftool dbconvert debugedit grep \
 	nix-build nix-channel nix-collect-garbage nix-copy-closure \
 	nix-env nix-hash nix-install-package nix-instantiate \
 	nix-log2xml nix-prefetch-url nix-pull nix-push nix-store nix-worker \
@@ -77,6 +77,10 @@ cudftool_SOURCES =	cudftool.c
 cudftool_CPPFLAGS =	$(AM_CPPFLAGS) $(CPPFLAGS) $(shell pkg-config --cflags glib-2.0)
 cudftool_LDFLAGS =	@LDFLAGS_STATIC@ $(LDFLAGS) $(shell pkg-config --libs glib-2.0)
 cudftool_LDADD =	$(RPMIO_LDADD_COMMON)
+
+dbconvert_SOURCES =	dbconvert.c
+dbconvert_LDFLAGS =	@LDFLAGS_STATIC@ $(LDFLAGS)
+dbconvert_LDADD =	$(RPMIO_LDADD_COMMON)
 
 debugedit_SOURCES =	debugedit.c hashtab.c
 debugedit_LDFLAGS =	@LDFLAGS_STATIC@ $(LDFLAGS)
